--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -4,6 +4,18 @@
         <dxi-item title="ScoreCard">
             <br><br>
 
+            <div>
+
+                <div class="dx-field">
+        
+                    <div class="dx-field-value d-block mr-0 ml-auto" style="width: 20%;">
+                        <dx-button stylingMode="contained" text="Actualizar" icon="refresh" type="normal" [width]="240" (onClick)="clickClientesRutas($event)">
+                        </dx-button>
+                    </div>
+        
+                </div>
+            </div>
+            <br>
             <!--<dx-responsive-box>
                 <dxi-col [ratio]=".35"></dxi-col>
                 <dxi-col [ratio]="1"></dxi-col>
